made changed in boy element of CSS & updated README.md file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, scale-initial=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/style.css">
     <title>Single Card</title>
   </head> 
